apps/codebuddy-real-campaign/level-6-ops-realtime/.codebuddy/tool-results/call_1772392013322_q2umrftjbjc.txt
file:///mnt/d/CascadeProjects/grok-cli/apps/codebuddy-real-campaign/level-6-ops-realtime/smoke-test.mjs:152
            await new Promise(resolve => {
            ^^^^^

SyntaxError: Unexpected reserved word
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)

Node.js v18.20.8